--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     
-    <title>Al-FurdousTrading</title>
+    <title>Al-FurdousTrading Site</title>
 </head>
 <body>
     <header>
