--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <li><a href="#about">About Us</a></li>
                         <li><a href="#services">Services</a></li>
                         <li><a href="#goods">Contact Us</a></li>
-
+                         <li><a href="#goods">Contact Us</a></li>
                     </ul>
                 </div>
                 <script src="js/menu.js"></script>
