--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@ Care Kit
     <div class="container">
         <div class="welcomeinside">
         <div>
-        <img src="/images/11.jpg" style="width:100%;" alt="">
+        <img src="images/11.jpg" style="width:100%;" alt="">
         </div>
         <div>
             <h1>Welcome to Al Furdous Trading</h1>
