--- a/index.html
+++ b/index.html
@@ -817,7 +817,7 @@ Care Kit
                 
                 
                     <li>
-                        <span><img src="/images/add.png" alt=""></span>
+                        <span><img src="images/add.png" alt=""></span>
                     Al Aweer Dray custom
                     shade 7/3 
                     </li>
